# src/routes/api/auth.js
@@ -3,7 +3,7 @@ import * as authController from "../../controllers/auth.controller.js";
 
 const router = express.Router();
 
-router.post("/register", authController.register);
+router.post("/register", authController.register, authController.login);
 router.post("/login", authController.login);
 router.post("/logout", authController.logout);
 router.post("/forgot-password", authController.forgotPassword);
